--- a/iot-fe/src/css/sidebar.css
+++ b/iot-fe/src/css/sidebar.css
@@ -44,8 +44,10 @@
 
 .nav-link:hover {
     background-color: rgba(255, 255, 255, 0.1); /* Lighten on hover */
+    color: white;
 }
 
 .nav-link.active {
-    background-color: rgba(0, 123, 255, 0.5); /* Active link background */
+    background-color: rgba(92, 178, 236, 0.5); /* Active link background */
+    color: white;
 }
