--- a/iot-fe/src/css/table.css
+++ b/iot-fe/src/css/table.css
@@ -4,7 +4,7 @@
   }
   
   .table th, .table td {
-    text-align: center; /* Canh giữa nội dung */
+    text-align: center;
   }
   
   .table tbody tr:nth-child(even) {
