chinh sua search

--- a/iot-fe/src/css/profile.css
+++ b/iot-fe/src/css/profile.css
@@ -1,6 +1,6 @@
 .container-profile {
     height: 100vh;
-    background-image: url('../static/img/bg.jpg');
+    background-image: url('../static/img/bg2.jpg');
     background-size: cover;
 }
 
